# news

./: .env.example  .gitignore  README.md  cron_run.py  main.py  main_2.py  migrate.py  pyproject.toml
apps/cronjobs/: query.py
apps/http/exceptions/: __init__.py  not_allow.py
apps/http/factories/: __init__.py  api_factory.py  auth_api_factory.py  public_api_factory.py
apps/http/requests/: __init__.py  delete_request.py  get_request.py  patch_request.py  post_request.py
apps/http/resources/: __init__.py  base_resource.py  category_resource.py  news_resource.py  resource.py
apps/http/resources/auths/: __init__.py  account_resource.py  category_publisher_resource.py  category_resource.py  login.py  news_resource.py  publisher_resource.py
common/: __init__.py  generated.py  mongo_client.py  sided_effected.py
config/: __init__.py  apps.py  databases.py
constants/: __init__.py  apps.py  services.py
exceptions/: __init__.py  service_exception.py
models/: _based_document.py  auth.py
services/: __init__.py
services/clients/aiohttp/: __init__.py  aiohttp_generated.py
services/common/: __init__.py  document_utils.py  news_generated.py
services/exceptions/: __init__.py  unique_exception.py
services/services/: __init__.py
services/services/auth/: __init__.py
services/services/auth/adapters/: __init__.py
services/services/document_services/adapters/: __init__.py  document_creatable_service.py  document_deletable_service.py  document_queried_service.py  (+1 more)
services/services/news_generated/: __init__.py  query_service.py  vn_express.py
(+8 files in other folders)
